# PythonIDE-Clean

./: .dockerignore  .env.aws  .env.example  .env.frontend  .env.production  .gitignore  2025-09-01-i-want-to-separate-the-frontend-and-the-backend-de.txt  2025-09-04-init-take-all-the-md-files-in-the-project-main-d.txt  AWS_MANUAL_STEPS.md  AWS_PRODUCTION_CREDENTIALS.txt  AWS_PRODUCTION_FINAL_STATUS.md  AZURE_DEPLOYMENT_GUIDE.md  BUGFIX_ROLE_ATTRIBUTE.md  BULK_UPLOAD_UI_GUIDE.md  CI_CD_FIXES.md  CLAUDE.md  CORRECT_USER_LIST.txt  COST_OPTIMIZATION_PLAN.md  CRITICAL_ISSUES_SUMMARY.md  CSV_TUTORIAL.md  DEBUG_SESSION_TIMEOUT.md  DEEP_SCAN_INDEX.md  DEEP_SCAN_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.admin  Dockerfile.azure  Dockerfile.backend  Dockerfile.frontend  EXAM_QUICK_COMMANDS.sh  EXAM_SCALING_ACTION_PLAN.md  FIX_PRIORITY_GUIDE.md  FOLDER_UPLOAD_IMPLEMENTATION.md  GIT_BEST_PRACTICES.md  INTEGRATED_REPL_IMPLEMENTATION.md  INTEGRATION_PLAN.md  LOCAL_TEST_ACCOUNTS.md  NEW_FEATURES.md  (+136 more)
server/: .env.example  .flake8  Dockerfile  FINAL_CREDENTIALS.txt  IMPLEMENTATION_READY.md  auto_init_users.py  bulk_import_users.py  cleanup_wrong_exam_folders.py  config.py  ensure_efs_directories.py  fly.toml  health_monitor.py  ide.db  init_docker_test_users.py  init_exam_users.py  init_local_test_accounts.py  integration_guide.md  preview_production_passwords.py  pyproject.toml  quick_test.sh  requirements.txt  reset_all_docker_passwords.py  reset_user_password.py  server.py  server_api.py  setup_local_db.py  setup_local_postgres.sh  (+6 more)
(+380 files in other folders)
