[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.0",
    "bcrypt==4.3.0",
    "jedi==0.18.1",
    "matplotlib>=3.10.0",
    "numpy>=2.3.0",
    "packaging>=25.0",
    "psutil==5.9.8",
    "psycopg2-binary==2.9.9",
    "ptyprocess==0.7.0",
    "python-dotenv==1.0.0",
    "requests==2.32.4",
    "terminado==0.18.1",
    "tornado==6.1",
]
